Aggiunto #54 - R1FS4.6 #55 - R3FS4.7